changed the header title and fixed some of the spacing on the homepage

--- a/src/pages/stylesheets/Home.css
+++ b/src/pages/stylesheets/Home.css
@@ -18,7 +18,7 @@ h2{
     font-size: 50px;
 }
 h3{
-    text-align: left;
+    text-align: center;
     margin: 0;
 }
 h4{
@@ -80,6 +80,9 @@ ul{
     justify-content: space-between;
     margin-bottom: 20px;
     margin-top: 0px;
+}
+#degree{
+    text-align: left;
 }
 #time{
     align-self: center;
